added first paragraphs

--- a/index.html
+++ b/index.html
@@ -75,15 +75,11 @@
 
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>Liebe Kolleginnen und Kollegen,</h2>
+						<p>Die <strong>Gastronomie</strong> ist eine Welt voller <strong>Leidenschaft, Kreativität und Herausforderungen.</strong> Um in diesem dynamischen Umfeld langfristig <strong>erfolgreich</strong> zu sein, sind <strong>durchdachte Konzepte, effiziente Prozesse und eine starke Marke</strong> entscheidend. Genau hier komme ich ins Spiel.
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						Mit meiner <strong>langjährigen Erfahrung</strong> in der Gastronomie, sowohl in der <strong>Leitung von Betrieben</strong> als auch in der <strong>Optimierung</strong> von Abläufen, unterstütze ich Sie dabei, Ihr Restaurant, Ihr Catering oder Ihren gastronomischen Betrieb auf das nächste Level zu bringen.
+						</p>
 					</header>
 
 					<!-- One -->
