modified:   index.html

--- a/index.html
+++ b/index.html
@@ -88,12 +88,18 @@
 								<div class="col-8 col-12-narrower">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>Hier muss noch <strong>Text</strong> hin und ein Foto</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>Dank meiner vielseitigen Erfahrung aus der gehobenen Gastronomie sowie dem Systemgastronomie-Management biete ich praxisnahe und individuell zugeschnittene Lösungen, die Ihr Unternehmen nachhaltig nach vorne bringen.
+									<br>
+									Lassen Sie uns gemeinsam Ihre gastronomische Vision verwirklichen!</p>
+									<p>Ich freue mich darauf, Sie kennenzulernen und gemeinsam Strategien zu entwickeln, die Ihren Betrieb noch erfolgreicher machen.
+									<br>Lassen Sie uns unverbindlich über Ihre aktuellen Herausforderungen und Möglichkeiten sprechen.
+									<br>Kontaktieren Sie mich direkt per E-Mail oder Telefon, um einen Termin zu vereinbaren.</p>
+
 									<footer>
 										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
+											<li><a href="#" class="button">Email</a></li>
 										</ul>
 									</footer>
 
@@ -101,14 +107,12 @@
 								<div class="col-4 col-12-narrower imp-narrower">
 
 									<ul class="featured-icons">
-										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
 										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
 										<li><span class="icon solid fa-laptop"><span class="label">Feature 3</span></span></li>
 										<li><span class="icon solid fa-inbox"><span class="label">Feature 4</span></span></li>
 										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
-									</ul>
-
+									</ul>								
 								</div>
 							</div>
 						</section>
@@ -121,9 +125,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Angebotsplanung</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Entwicklung innovativer und profitabler Speisekarten, saisonale und regionale Anpassungen</p>
 									</section>
 
 								</div>
@@ -132,9 +136,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Wareneinsatz & Warenwirtschaftsoptimierung</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Kostenoptimierung, Lieferantenmanagement, Schulungen und externe Warenwirtschaftsprogramme</p>
 									</section>
 
 								</div>
@@ -143,9 +147,42 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Storytelling & Branding</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Entwicklung einzigartiger Markenkonzepte, Strategien zur Kundengewinnung</p>
+									</section>
+
+								</div>
+								<div class="col-4 col-12-narrower">
+
+									<section>
+										<span class="icon solid featured fa-check"></span>
+										<header>
+											<h3>Küchen- und Serviceoptimierung</h3>
+										</header>
+										<p>Prozessanalysen, Mitarbeiterschulungen für mehr Effizienz</p>
+									</section>
+
+								</div>
+								<div class="col-4 col-12-narrower">
+
+									<section>
+										<span class="icon solid featured fa-check"></span>
+										<header>
+											<h3>Marketing & Vertrieb</h3>
+										</header>
+										<p>Social Media, SEO, Google Ads, Bewertungsmanagement</p>
+									</section>
+
+								</div>
+								<div class="col-4 col-12-narrower">
+
+									<section>
+										<span class="icon solid featured fa-check"></span>
+										<header>
+											<h3>Office & Management</h3>
+										</header>
+										<p>Rechnungswesen, HR-Management, Monats- und Jahresabschlüsse</p>
 									</section>
 
 								</div>
