modified:   index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<div class="col-8 col-12-narrower">
 
 									<header>
-										<h2>Hier muss noch <strong>Text</strong> hin und ein Foto</h2>
+										<h2>Hier muss noch <strong>Text</strong> hin und ein Foto. Oder wir bauen diese Sektion woanders ein? Das Grün ist irgendwie hässlich.</h2>
 									</header>
 									<p>Dank meiner vielseitigen Erfahrung aus der gehobenen Gastronomie sowie dem Systemgastronomie-Management biete ich praxisnahe und individuell zugeschnittene Lösungen, die Ihr Unternehmen nachhaltig nach vorne bringen.
 									<br>
